Add .gitignore and update model notes
- Created a .gitignore file to exclude specific directories.
- Added notes indicating where the final model is saved and that pickled models are not available due to .gitignore.
- Cleaned up a notebook by removing unnecessary markdown cells, focusing on essential code for loading datasets and tokenization.
- Implemented data preprocessing steps including tokenization and dataset formatting.
- Set up data loaders for training, evaluation, and testing datasets.

--- a/notebooks/training/DistillxEven.ipynb
+++ b/notebooks/training/DistillxEven.ipynb
@@ -18,7 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import pickle"
    ]
   },
   {
@@ -102,7 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84af68004a164bd5b71a55e5a2558b21",
+       "model_id": "5d294fccbb274dbea148d3df9330c3ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +117,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d14ac1acbea04a629c86d5dab997fe4c",
+       "model_id": "4e2d9359f2054630a79d31b133601a4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -130,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f34ac07ea434e3e82a80247e192715f",
+       "model_id": "e9123e78d1c1472a839c3aa42b01bd1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c391a49938754f4c964e69c274fe5743",
+       "model_id": "3028549b807b4473a975ba6603b6f4a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -266,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "307dd0050a544db38ddb3716c13edec6",
+       "model_id": "fd862d389b9e439e8a2557b3d4d8f758",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa4416fa2f9f489a9b175bc2bd816800",
+       "model_id": "fdd4ce5f08054fe9a3800713865892dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +295,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ae2e7db55a94cc28d566d4565f040de",
+       "model_id": "417a4ae247d24f34abeffa0248d89d39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -308,7 +309,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bad16abc8f9d4fe0bb1d9253b8b5c5aa",
+       "model_id": "6a1b5e1eea6b49188107fe66fde3e6ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +323,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "697cd7e3f12b4c8c84ed88059fd087f3",
+       "model_id": "8574cf98f49f4216bacfb254508bdd72",
        "version_major": 2,
        "version_minor": 0
       },
@@ -423,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +445,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ff528b9fde34567b1a7ddf0e0a23438",
+       "model_id": "a6c929263f7544e9b9d807aef7a8872e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -458,7 +459,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34de9b2bb2434c88b47bb0bcb5b57669",
+       "model_id": "9dced781d80345949fc435741630fc10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -472,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a81ec0fea7404e039f7cc9d95cae366e",
+       "model_id": "c12fc5dacd7240be8c51e59edf21958a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "824cad26f79d4c729c05433a61160485",
+       "model_id": "688ff905eca44e5eb9085ea4ef11a333",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1187,7 +1188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b6a23987e3409a848c06f2f7764438",
+       "model_id": "3b3d359767ff4166bbba0bfba956000b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1372,7 +1373,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb923648e03f4d9cb0497186dc140772",
+       "model_id": "9a41808744a94159b83737bbc0b1276b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1454,17 +1455,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the model, config and tokenizer\n",
-    "output_dir = \"even-layers-distillation\"\n",
-    "if not os.path.exists(output_dir):\n",
-    "    os.makedirs(output_dir)\n",
-    "tokenizer.save_pretrained(output_dir)\n",
-    "model.save_pretrained(output_dir)\n",
-    "configuration.save_pretrained(output_dir)"
+    "with open(\"../helper/even-layers-distillation/teacher_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(teacher_model, f)\n",
+    "\n",
+    "with open(\"../helper/even-layers-distillation/student_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(model, f)\n",
+    "\n",
+    "with open(\"../helper/even-layers-distillation/tokenizer.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(tokenizer, f)"
    ]
   }
  ],
