Update model training and prediction logic
- Added new import for a library.
- Renamed function for clarity.
- Introduced comments to clarify sections in the code.
- Updated example usage to reflect function name change.
- Removed unused layers from model configuration.
- Adjusted loss calculations to exclude distillation and cosine losses.
- Cleaned up unnecessary code blocks.

--- a/notebooks/testing/LoRAxDistill.ipynb
+++ b/notebooks/testing/LoRAxDistill.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "import torch\n",
     "import pickle\n",
+    "import peft\n",
     "\n",
     "device = torch.device(\"cpu\")\n",
     "device"
@@ -44,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_toxicity_distillation(text, model, tokenizer):\n",
+    "def predict_toxicity(text, model, tokenizer):\n",
     "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=True)\n",
     "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
     "    with torch.no_grad():\n",
@@ -70,6 +71,7 @@
     }
    ],
    "source": [
+    "# Even layers distillation\n",
     "with open(\"../helper/even-layers-distillation/student_model.pkl\", \"rb\") as f:\n",
     "    model = pickle.load(f).to(device)\n",
     "with open(\"../helper/even-layers-distillation/tokenizer.pkl\", \"rb\") as f:\n",
@@ -77,7 +79,7 @@
     "\n",
     "# Example usage\n",
     "text = \"He is a good boy!\"\n",
-    "label, confidence = predict_toxicity_distillation(text, model, tokenizer)\n",
+    "label, confidence = predict_toxicity(text, model, tokenizer)\n",
     "print(f\"Predicted label: {label}\\nConfidence: {confidence:.4f}\")"
    ]
   },
@@ -96,6 +98,7 @@
     }
    ],
    "source": [
+    "# Odd layers distillation\n",
     "with open(\"../helper/odd-layers-distillation/student_model.pkl\", \"rb\") as f:\n",
     "    model = pickle.load(f).to(device)\n",
     "with open(\"../helper/odd-layers-distillation/tokenizer.pkl\", \"rb\") as f:\n",
@@ -103,7 +106,34 @@
     "\n",
     "# Example usage\n",
     "text = \"He is a good boy!\"\n",
-    "label, confidence = predict_toxicity_distillation(text, model, tokenizer)\n",
+    "label, confidence = predict_toxicity(text, model, tokenizer)\n",
+    "print(f\"Predicted label: {label}\\nConfidence: {confidence:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted label: noHate\n",
+      "Confidence: 0.9390\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LoRA\n",
+    "with open(\"../helper/low-rank-adaptation/student_model.pkl\", \"rb\") as f:\n",
+    "    model = pickle.load(f).to(device)\n",
+    "with open(\"../helper/low-rank-adaptation/tokenizer.pkl\", \"rb\") as f:\n",
+    "    tokenizer = pickle.load(f)\n",
+    "\n",
+    "# Example usage\n",
+    "text = \"He is a good boy!\"\n",
+    "label, confidence = predict_toxicity(text, model, tokenizer)\n",
     "print(f\"Predicted label: {label}\\nConfidence: {confidence:.4f}\")"
    ]
   }
